--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular2-infinite-scroll": "^0.3.5",
     "core-js": "^2.5.4",
     "ngx-infinite-scroll": "^6.0.0",
     "rxjs": "^6.0.0",
+    "sweetalert2": "^7.22.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
